Fix alignment of action-header

--- a/client/extensions/woocommerce/components/action-header/style.scss
+++ b/client/extensions/woocommerce/components/action-header/style.scss
@@ -1,5 +1,6 @@
 .action-header__header {
 	width: 100%;
+	min-height: 58px;
 	padding: 8px 16px 7px;
 	display: flex;
 	flex-direction: row;
